# python_django

./: README.md  pyproject.toml
academia/: settings.py  urls.py
inventory/: models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_inventory_identifier.py  0003_address.py  0004_test.py  0005_delete_test.py
inventory/utils/: auth.py
point_of_sale/: apps.py  urls.py  views.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_users_user.py
