[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["alanjosue97 <perezaln.09@gmail.com>"]
readme = "README.md"
packages = [{include = "python_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
